--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,13 +1,23 @@
-<div>
+<!-- <div>
     <img class="circle" src="./assets/img/o-mitte.svg" alt="">
-    <span class="baloo">Let's work together</span>
+    <span class="baloo">{{"aboutMe.title" | translate}}</span>
     <div>
         <img class="circle_small" src="./assets/img/o-mitte.svg" alt="">
         <p class="montserrat">
-            I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.  I am looking forward to continuing my developer career with a job in a junior web developer position.
-
-            If you think I’d be a good match for your projects, contact me!
+            {{"aboutMe.description" | translate}}
         </p>
-        <a class="poppins">Send a message</a> 
+        <a class="poppins">{{"aboutMe.button" | translate}}</a> 
+    </div>
+</div> -->
+
+
+<div class="aboute-me-container">
+    <img src="./assets/img/o-mitte.svg" alt="">
+    <span class="baloo">{{"aboutMe.title" | translate}}</span>
+    <div>
+        <p class="montserrat">
+            {{"aboutMe.description" | translate}}
+        </p>
+        <a class="poppins">{{"aboutMe.button" | translate}}</a> 
     </div>
 </div>
