--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,12 +1,12 @@
 <section>
     <app-header></app-header>
-     <!-- <img  class="background-img" src="./assets/img/o-mitte.svg" alt=""> -->
+     <img  class="background-img" src="./assets/img/o-mitte.svg" alt="">
     <img class="mevlida-img" src="./assets/img/mevlida_bg.png" alt="">
-    <h2 class="montserrat">Hello! Iam Mevlida</h2>
-    <h1 class="baloo">FRONTEND DEVELOPER</h1>
+    <h2 class="montserrat">{{ "landingPage.iam" | translate}}</h2>
+    <h1 class="baloo">{{ "landingPage.jobTitle" | translate}}</h1>
 
     <div>
-        <p class="montserrat">SCROLL</p>
+        <p class="montserrat">{{ "landingPage.scroll" | translate}}</p>
         <div class="line"></div>
     </div>
 
