--- a/src/app/main-content/my-work/project/project.component.html
+++ b/src/app/main-content/my-work/project/project.component.html
@@ -2,7 +2,7 @@
     <div
       [ngClass]="{ project_container: true, reversed: project.isReversed }">
       <div class="left_side">
-        <a href="{{ project.linkLiveTest }}" target="_blank"></a><img src="{{ project.src }}" alt="" />
+        <a href="{{ project.linkLiveTest }}" target="_blank"><img src="{{ project.src }}" alt="" /></a>
       </div>
       <div class="right_side">
         <h2 class="baloo">{{ project.title }}</h2>
