--- a/src/app/main-content/skill-set/skill-set.component.html
+++ b/src/app/main-content/skill-set/skill-set.component.html
@@ -1,7 +1,7 @@
 
 <div class="background_container">
     <div class="skill_set_container">
-        <h1 class="baloo">Skill set</h1>
+        <h1 class="baloo">{{"skills.title" | translate}}</h1>
         <div>
             @for (skill of skills; track $index) {
             <div>
