--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,7 +1,7 @@
 <section>
     <app-header></app-header>
     <div class="privacy-policy-container">
-        <img src="./assets/img/o-mitte.svg" alt="">
+        <img class="background-img" src="./assets/img/o-mitte.svg" alt="">
         <div class="overflow-scroll-container">
         <h1>Datenschutzerklärung</h1>
 <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
