--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -5,6 +5,7 @@
    width: 100%;
 }
 
+
 h1 {   
     font-size: 56px;   
     font-weight: 800;
@@ -14,7 +15,8 @@ h1 {
 .imprint-container {
     overflow: hidden;
     margin: 0 auto;
-    padding: 0 100px;
+    max-height: 100vh;
+    padding: 120px 100px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -29,14 +31,23 @@ h1 {
         font-weight: 400;
         font-family: 'Montserrat';
         color: black;
+        margin-block-start: 0;
+        margin-block-end: 0;
 }
 }
 
 .background-img {
     position: absolute;
-    top: -50px;
+    top: -200px;
     left: -40px;
-    width: 300px;
+    width: 500px;
+}
+
+.background-img1{
+    position: absolute;
+    top: 500px;
+    right: 50px;
+    width: 200px;
 }
 
 @media(max-width: 850px) {
