--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -2,7 +2,13 @@ section{
     width: 100%;
     height: 746px;
     background: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
-    margin-top: 350px;
+    margin-top: 200px;
+
+    .main_content_container{
+        max-width: 1440px;
+        margin: 0 auto;
+        width: 100%;
+    }
 
 
     h1{     
@@ -17,25 +23,23 @@ section{
     }
 
     form{
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
-        // gap: 20px;
         display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 22px;
-
-
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 22px;
     }
 
     .contact_container{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: baseline;
         padding-left: 100px;
         padding-right: 100px;
+        padding-bottom: 70px;
+        gap: 150px;
+      
+
 
         h2{
             
@@ -49,7 +53,7 @@ section{
 
         }
 
-        p{
+        .p{
             
             font-size: 16px;
             font-weight: 400;
@@ -60,7 +64,7 @@ section{
         }
 
         input{
-            width: 617px;
+            width: 500px;
             height: auto;
             padding: 15px 25px 15px 25px;
             gap: 10px;
@@ -72,6 +76,7 @@ section{
             font-weight: 400;
             line-height: 19.2px;
             text-align: left;
+            outline: none;
             cursor: pointer;
 
             &:hover{
@@ -79,14 +84,14 @@ section{
             }
 
             &:focus{
-                border: 1px solid #FF5959;
+                border: 2px solid #FF5959;
             }
 
 
     }
 
     textarea{
-            width: 617px;
+            width: 500px;
             height: 202px;
             padding: 15px 25px 15px 25px;
             gap: 10px;
@@ -99,6 +104,7 @@ section{
             line-height: 19.2px;
             text-align: left;
             cursor: pointer;
+            outline: none;
 
             &:focus{
                 border: 1px solid #FF5959;
@@ -118,12 +124,13 @@ section{
     align-items: center;
     gap: 10px;
 
-    span{
+    .span{
         font-family: 'Montserrat';
         font-size: 14px;
         font-weight: 400;
         line-height: 16.8px;
         text-align: left;
+        width: 400px;
 
     }
 
@@ -142,8 +149,7 @@ section{
 
         &:hover{
             text-decoration: underline;
-            color:#DE0000;
-            transform: scale(1.1);
+            font-weight: 700;
         }
     }
 }
@@ -151,7 +157,7 @@ section{
 
 
 .button_disabled{
-    width: 200px;
+    width: auto;
     padding: 15px 30px 15px 30px;
     height: 58px;
     gap: 10px;
@@ -168,7 +174,7 @@ section{
 }
 
 .button_enabled{
-    width: 200px;
+    width: auto;
     padding: 15px 30px 15px 30px;
     height: 58px;
     gap: 10px;
@@ -205,10 +211,18 @@ section{
         background-image: url(./../../../assets/img/goupbuttondefault.svg);
         width: 39px;
         height: 39px;
+        position: absolute;
+        top:5100px;
 
         &:hover{
             background-image: url(./../../../assets/img/goupbuttonhover.svg);
         }
+    }
+
+    img{
+        position:absolute;
+        top: 5000px;
+        right: 100px;
     }
 }
 
@@ -238,11 +252,12 @@ section{
     z-index: 5;
     left: 0;
     top: 0;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(20, 29, 47, 0.95);
+    background-color: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
     overflow: hidden;
     transition: 0.5s;
     font-size: 24px;
+    font-family: 'Montserrat';
+    color: #FF5959;
     .popup {
       position: relative;
       top: 25%;
@@ -261,4 +276,5 @@ section{
         filter: drop-shadow(0px 0px 5px #FF5959);
     }
   }
+
   
