--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -1,16 +1,16 @@
 <section>
 <div class="main_content_container">
-    <div class="headline_container" data-aos="fade-left">
+    <div class="headline_container" >
         <img class="circle_1" src="./assets/img/o-mitte.svg" alt="">
         <img class="circle_2" src="./assets/img/o-mitte.svg" alt="">
         <img class="circle_3" src="./assets/img/o-mitte.svg" alt="">
         <img class="circle_4" src="./assets/img/o-mitte.svg" alt="">
         <img class="circle_5" src="./assets/img/o-mitte.svg" alt="">
         <img class="circle_6" src="./assets/img/o-mitte.svg" alt="">
-      <h1 class="baloo">My work</h1>
+      <h1 class="baloo">{{ "meineProjekte.title" | translate}}</h1>
     </div>
-    <span data-aos="fade-left" class="montserrat">
-        Feel free to try out my latest development projects and look into their code. 
+    <span class="montserrat">
+       {{ "meineProjekte.text" | translate}}
     </span>
     <div class="project">
       <app-project></app-project>
