--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -48,16 +48,13 @@ section{
     width: 100%;
     overflow: hidden;
     margin: 0 auto;
-    padding-bottom: 50px;
+   
     position: relative;
+   padding: 120px 0;
 
-    .background-img {
-        position: absolute;
-        top: -50px;
-        left: -40px;
-        width: 500px;
-    }
+    
 }
+
 
 .overflow-scroll-container {
     display: flex;
@@ -67,7 +64,12 @@ section{
     gap: 10px;
     text-align: center
 }
-
+.background-img {
+  position: absolute;
+  top: -100px;
+  left: -60px;
+  width: 500px;
+}
 
 @media(max-width: 850px) {
     .privacy-policy-container {
