--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer_container">
     <div class="footer">
-        <img src="./assets/img/logo.svg" alt="">
+        <img class="logo_footer" src="./assets/img/S.svg" alt="">
         <span class="montserrat">
             ⒸMevlida Salendrkovic 2024 
         </span>
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="imprint_container">
-        <a class="montserrat" style="font-size: 18px;" [routerLink]="['/imprint']">Imprint</a>
+        <a class="montserrat" style="font-size: 18px;" [routerLink]="['/imprint']">{{ "footer.imprint" | translate}}</a>
     </div>
 </div>
     
