--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,6 @@
 footer{
-    width: 100%;
+
+   
     height: 291px;
     display: flex;
     flex-direction: column;
@@ -20,20 +21,28 @@ footer{
         text-align: center;
     }
 
+   
 }
 
 .footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1440px;
     height: 69px;
+    width: 1440px;
 }
 
 .icons_footer{
     display: flex;
     gap: 20px;
 }
+
+.logo_footer{
+        width: 64px;
+        height: 64px;
+        border:1px solid #FF5959;
+        border-radius: 50px;
+    }
 
 .footer_container{
     display: flex;
