--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,15 +1,11 @@
 <nav>
-    <a href="#landingPage"><img src="./assets/img/logo.svg" alt=""></a>
+    <a href="#landingPage"><img src="./assets/img/S.svg" alt=""></a>
     <div>
-        <!-- <a href="#aboutMe">{{ "header.about" | translate }}</a>
+        <a href="#aboutMe">{{ "header.about" | translate }}</a>
         <a href="#skillSet">{{ "header.skills" | translate }}</a>
-        <a href="#myWork">{{ "header.portfolio" | translate }}</a> -->
-        <a href="#aboutMe">About me</a>
-        <a href="#skillSet">Skill set</a>
-        <a href="#myWork">My work</a>
-        <a (click)="translate.switchLanguage('en')">EN</a> |
-        <a (click)="translate.switchLanguage('de')">DE</a>
-
+        <a href="#myWork">{{ "header.portfolio" | translate }}</a>
+        <a (click)="translate.switchLanguage('en')">EN</a>|<a (click)="translate.switchLanguage('de')">DE</a>
+       
           
        
     </div>
