--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -18,6 +18,6 @@
         <p class="montserrat">
             {{"aboutMe.description" | translate}}
         </p>
-        <a class="poppins">{{"aboutMe.button" | translate}}</a> 
+        <a  [routerLink]="['/contact']" class="poppins">{{"aboutMe.button" | translate}}</a> 
     </div>
 </div>
