--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,9 +1,11 @@
 <section>
     <app-header></app-header>
+    <div class="landing_page_container">
+        <div style="position: relative;">
      <img  class="background-img" src="./assets/img/o-mitte.svg" alt="">
-    <img class="mevlida-img" src="./assets/img/mevlida_bg.png" alt="">
+    <img class="mevlida-img" src="./assets/img/mevlida.png" alt="">
     <h2 class="montserrat">{{ "landingPage.iam" | translate}}</h2>
-    <h1 class="baloo">{{ "landingPage.jobTitle" | translate}}</h1>
+    <h1 class="baloo">{{ "landingPage.jobTitle" | translate}} </h1>
 
     <div>
         <p class="montserrat">{{ "landingPage.scroll" | translate}}</p>
@@ -18,4 +20,6 @@
         <a class="icons_linkedin" href="https://www.linkedin.com/in/mevlida-salendrkovic/" target="_blank"><img style="width: 40px; height: 40px" src="./assets/img/linkedin.svg" alt=""></a>
           
     </div>
+    </div>
+</div>
 </section>
