--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer_container">
     <div class="footer">
-        <img class="logo_footer" src="./assets/img/S.svg" alt="">
+        <a  href="#landingPage"><img class="logo_footer" src="./assets/img/S.svg" alt=""></a>
         <span class="montserrat">
             ⒸMevlida Salendrkovic 2024 
         </span>
