--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -1,16 +1,22 @@
 section{
-    // width: 100%;
-    // background-color: white;
+    // max-width: 1440px;
+    // padding:100px;
+    // margin: 0 auto;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 50px;
+
     max-width: 1440px;
-    padding:100px;
+    padding: 100px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 50px;
-    // position: relative;
-    // overflow-x: hidden;
+    position: relative;
+    overflow-x: hidden;
 
-  
+   
+
 
     h1{
         color: #FF5959;
@@ -19,20 +25,18 @@ section{
         line-height: 96px;
         letter-spacing: 0.01em;
         text-align: left;
-        position: absolute;
-        left:300px;
-        top:2500px;
+        margin-block-start: 0.3em;
+        margin-block-end: 0.3em
+    
 
     }
 
     span{
         width: 680px;
         height: 56px;
-        position: absolute;
-        top: 2680px;
-        left: 300px;
+
         color: black;
-        font-size: 23px;
+        font-size: 20px;
         line-height: 27.6px;
 
     }
@@ -42,25 +46,26 @@ section{
 
 .circle_1{
     position: absolute;
-    left: 763px;
-    top: 2480px;
-    width: 110px;
-    height: 110px;
+    left: 655px;
+    top:50px;
+    width: 90px;
+    height: 90px;
 }
 
 .circle_2{
     width: 183px;
     height: 183px;
     position: absolute;
-    right: 400px;
-    top: 2585px;
+    top:220px;
+    right: 60px;
+
 }
 
 .circle_3 {
     width: 393px;
     height: 393px;
     position: absolute;
-    top: 2862px;
+   top:560px;
     left: -200px;
 }
 
@@ -68,15 +73,15 @@ section{
     width: 652px;
     height: 652px;
     position: absolute;
-    top: 3147px;
-    right: 0px;
+    top:820px;
+    right: -160px;
 }
 
 .circle_5 {
     width: 51px;
     height: 51px;
     position: absolute;
-    top: 3695px;
+    top:1200px;
     left: 100px;
 }
 
@@ -84,7 +89,31 @@ section{
     width: 180px;
     height: 180px;
     position: absolute;
-    top:4200px;
+    bottom:20px;
     left: 620px;
 }
 
+
+@media(max-width:1000px){
+    section{
+        padding: 50px;
+        align-items: center;
+        justify-content: center;
+        .circle_1,.circle_2,.circle_3,.circle_4,.circle_5,.circle_6{
+            display: none;
+        }
+    }
+}
+
+@media(max-width: 500px){
+    section{
+        h1{
+            font-size: 50px;
+            line-height: 50px;
+        }
+        span{
+            width: 100%;
+            font-size: 16px;
+        }
+    }
+    }
