--- a/src/app/main-content/skill-set/skill-set.component.scss
+++ b/src/app/main-content/skill-set/skill-set.component.scss
@@ -1,15 +1,18 @@
 .background_container{
     background: linear-gradient(128.94deg, #FF5959 -33.96%, #FF5959 36.71%, #DE0000 112.25%);
-    width: 100%;
-    height: 632px;
 }
 
 .skill_set_container{
+
+    max-width: 1440px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 50px;
+    padding: 80px 100px;
+
 
     >h1{
         font-size: 96px;
@@ -58,5 +61,36 @@
     }
 
 }
-    
 
+@media(max-width: 860px){
+    .skill_set_container{
+
+        div{
+            column-gap: 100px;
+        }
+        >h1{
+          font-size: 56px;
+          line-height: 50px;
+        }
+    }
+}
+    
+@media(max-width: 490px){
+    .skill_set_container{
+
+        div{
+            column-gap: 50px;
+        }
+       img{
+           width: 50px;
+       }
+       }
+    }
+
+@media(max-width: 415px){
+    .skill_set_container{
+        padding-left: 0;
+        padding-right: 0;
+}
+    
+}
