--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -50,9 +50,8 @@ section{
     margin: 0 auto;
    
     position: relative;
-   padding: 120px 0;
-
-    
+   padding-top:220px;
+    padding-bottom: 50px;
 }
 
 
@@ -67,18 +66,23 @@ section{
 .background-img {
   position: absolute;
   top: -100px;
-  left: -60px;
-  width: 500px;
+  left: -120px;
+  width: 300px;
 }
 
-@media(max-width: 850px) {
-    .privacy-policy-container {
-        padding-left: 20px;
-        padding-right: 20px;
+@media(max-width: 550px){
+  section{
+    h1{
+        font-size: 28px;
+        line-height: 32px;
     }
 
-    .background-img {
-        top: -100px;
-        left: -120px;
+    h2{
+        font-size: 24px;
+    } 
+
+    h3{
+        font-size: 20px;
     }
+  }
 }
