--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -42,6 +42,7 @@ footer{
         height: 64px;
         border:1px solid #FF5959;
         border-radius: 50px;
+        cursor: pointer;
     }
 
 .footer_container{
@@ -98,3 +99,45 @@ footer{
     }
 }
 
+
+@media(max-width:1460px){
+    .footer{
+        width: 1240px;
+    }
+}
+
+@media(max-width:1260px){
+    .footer{
+        width: 1040px;
+    }
+}
+
+@media(max-width:1060px){
+    .footer{
+        width: 840px;
+    }
+}
+
+@media(max-width:860px){
+    .footer{
+        flex-direction: column;
+        width: 440px;
+        gap:20px;
+        height: auto;
+
+    }
+}
+
+@media(max-width: 460px){
+    .footer{
+        width:240px;
+        span{
+            font-size: 16px;
+        }
+    .imprint_container{
+        a{
+            font-size:16px;
+        }
+    }
+}
+}
