--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -27,7 +27,8 @@ nav{
     }
 
     .burger_menu{
-       display: none;
+      margin-right: 10px;
+      cursor: pointer;
     }
     .languages{
         display: flex;
@@ -45,7 +46,7 @@ nav{
 }
 
 div{
-    div{
+    .language_container{
         display: flex;
         justify-content: end;
     }
@@ -58,13 +59,53 @@ a{
     font-weight: 400;
     margin: 0 16px;
     font-family: 'Montserrat', sans-serif;
-    width: 120px;
+    // width: 120px;
 
     &:hover{
        font-weight: 700;
 
     }
 }
+
+.popup_background {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    background-color: #fffc;
+    background-color: linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
+    font-size: 24px;
+    .popup {
+      position: relative;
+      top: 25%;
+      width: 100%;
+      text-align: center;
+      margin-top: 30px;
+      background-color:  linear-gradient(179.99deg, #FFFFFF 12.89%, #FFEAEA 91.39%);
+      .link_container_mobile {
+        margin-right: 0;
+      }
+      .link_container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        font-size: 40px;
+        gap: 30px;
+        .a {
+          font-size: 40px;
+          width: auto;
+        }
+        span {
+          font-size: 40px;
+        }
+      }
+    }
+  }
+
+  
 
 // @media(max-width:1460px){
 //     nav{
